fix(admin): add spacing between header icon and title text (#105)

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -479,3 +479,8 @@ body.satori-studio-admin.fl-builder_page_fl-builder-settings .wrap .icon32 {
   background-position: center;
   background-size: 24px 24px;
 }
+
+body.satori-studio-admin.toplevel_page_fl-builder-settings .fl-settings-heading > img,
+body.satori-studio-admin.fl-builder_page_fl-builder-settings .fl-settings-heading > img {
+  margin-right: 6px;
+}
